// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard - CreditCardListItem expect to match snapshot as expired 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
  >
    <svg
      class="MuiBox-root css-6rlkhh"
      data-testId="Visa"
      filter="grayscale(100%)"
      sx="[object Object]"
    >
      cc_visa.svg
    </svg>
    <span
      class="MuiBox-root css-8i1y65"
    >
      **** 
      1234567890123456
    </span>
     
    10/28
    <span
      class="MuiBox-root css-uwe8ff"
    >
      Expired
    </span>
  </p>
</div>
`;

exports[`CreditCard - CreditCardListItem expect to match snapshot to hide everything 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
  >
    <span
      class="MuiBox-root css-1a338f9"
    >
      **** 
      1234567890123456
    </span>
     
  </p>
</div>
`;

exports[`CreditCard - CreditCardListItem expect to match snapshot with minimum props 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
  >
    <svg
      class="MuiBox-root css-6rlkhh"
      data-testId="Visa"
      sx="[object Object]"
    >
      cc_visa.svg
    </svg>
    <span
      class="MuiBox-root css-8i1y65"
    >
      **** 
      1234567890123456
    </span>
     
    10/28
  </p>
</div>
`;
